<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="116dp"
            android:text="@string/initcount"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="100dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="76dp"
            android:text="@string/countLabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/start"
            android:layout_width="107dp"
            android:layout_height="70dp"
            android:layout_below="@+id/count"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="46dp"
            android:onClick="startCounting"
            android:text="@string/start"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/stop"
            android:layout_width="107dp"
            android:layout_height="70dp"
            android:layout_below="@+id/count"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="46dp"
            android:onClick="stopCounting"
            android:text="@string/stop"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="invisible" />

        <Button
            android:id="@+id/post"
            android:layout_width="107dp"
            android:layout_height="70dp"
            android:layout_below="@+id/count"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="46dp"
            android:onClick="postData"
            android:text="@string/post"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="invisible" />

        <Button
            android:id="@+id/reset"
            android:layout_width="107dp"
            android:layout_height="70dp"
            android:layout_below="@+id/count"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:onClick="resetCounting"
            android:text="@string/reset"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="invisible" />


    </RelativeLayout>
